# dash_template

./: pyproject.toml
src/dash_template/: app.py  ids.py  layout.py  loader.py
